--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -62,15 +62,8 @@
 					<img src="assets/icons/sidemenu/new-icons/index.svg" class="defaultIcon">	
 					<img src="assets/icons/sidemenu/new-icons/index-active.svg" class="activeIcon">			
 				</span>
-				<span class="linkTitle">Index Pipeline</span>
+				<span class="linkTitle">Workbench</span>
 			</div>
-			<div mat-button class="mat-button" [routerLink]="['/attributes']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
-			<span class="inlineIconBox">
-				<img src="assets/icons/sidemenu/new-icons/attributes.svg" class="defaultIcon">	
-				<img src="assets/icons/sidemenu/new-icons/attributes-active.svg" class="activeIcon">				
-			</span>
-			<span class="linkTitle">Fields</span>
-		    </div>
 		<div class="sub-title marginTop15">Search Configurations</div>
 			<div mat-button class="mat-button" [routerLink]="['/weights']" skipLocationChange routerLinkActive="active" (click)="preview('weights')" mat-button>
 				<span class="inlineIconBox leftAdjust">
@@ -100,6 +93,20 @@
 				</span>
 				<span class="linkTitle">Results Ranking</span>
 			</div>
+			<div mat-button class="mat-button" [routerLink]="['/attributes']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
+				<span class="inlineIconBox">
+					<img src="assets/icons/sidemenu/new-icons/attributes.svg" class="defaultIcon">	
+					<img src="assets/icons/sidemenu/new-icons/attributes-active.svg" class="activeIcon">				
+				</span>
+				<span class="linkTitle">Facets</span>
+			</div>
+			<div mat-button class="mat-button" [routerLink]="['/rules']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
+					<span class="inlineIconBox">
+							<img src="assets/icons/sidemenu/new-icons/rules.svg" class="defaultIcon">	
+							<img src="assets/icons/sidemenu/new-icons/rules-active.svg" class="activeIcon">				
+					</span>
+					<span class="linkTitle">Rules & Personalization</span>
+			</div>
 			<div mat-button class="mat-button" [routerLink]="['/query']" skipLocationChange routerLinkActive="active" (click)="preview('query')" mat-button>			
 				<span class="inlineIconBox">	
 					<img src="assets/icons/sidemenu/new-icons/query.svg" class="defaultIcon">	
@@ -114,13 +121,7 @@
 				</span>
 				<span class="linkTitle">NLP & Machine Learning</span>
 			</div>
-			<div mat-button class="mat-button" [routerLink]="['/rules']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
-				<span class="inlineIconBox">
-						<img src="assets/icons/sidemenu/new-icons/rules.svg" class="defaultIcon">	
-						<img src="assets/icons/sidemenu/new-icons/rules-active.svg" class="activeIcon">				
-				</span>
-				<span class="linkTitle">Rules & Personalization</span>
-			</div>
+			
 			<div mat-button class="mat-button">
 				<span class="inlineIconBox">
 					<img src="assets/icons/sidemenu/new-icons/demo.svg" class="defaultIcon">	
