--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -1,115 +1,3 @@
-<div class="indexContainer row">
-    <perfect-scrollbar class="scrollBarContainer">
-        <div class="radioContainer paddinTop-30">
-            <div class="label">Tokenizer </div>
-            <div class="info">Tokenizer tokenizes the given user input into smaller tokens which are useful for parsing.</div>
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-1" name="tokenizer" class="radio-custom" type="radio"  checked>
-                    <label for="radio-1" class="radio-custom-label">Word Tokenizer</label>
-                </div>  
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-2" name="tokenizer" class="radio-custom" type="radio"  >
-                    <label for="radio-2" class="radio-custom-label">Boundary</label>
-                </div>  
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-3" name="tokenizer" class="radio-custom" type="radio"  >
-                    <label for="radio-3" class="radio-custom-label">Charcter</label>
-                </div>  
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-4" name="tokenizer" class="radio-custom" type="radio"  >
-                    <label for="radio-4" class="radio-custom-label">Sentense</label>
-                </div>  
-        </div>
-
-        <div class="radioContainer">
-            <div class="label">Stemmer </div>
-            <div class="info">Stemmer will stem each eligible word removing the suffixes like ing, tion etc.</div>
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-5" name="stemmer" class="radio-custom" type="radio"  checked>
-                    <label for="radio-5" class="radio-custom-label">Porter</label>
-                </div>  
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-6" name="stemmer" class="radio-custom" type="radio"  >
-                    <label for="radio-6" class="radio-custom-label">Snowball</label>
-                </div>  
-                <div class="kr-sg-radiobutton">
-                    <input id="radio-7" name="stemmer" class="radio-custom" type="radio"  >
-                    <label for="radio-7" class="radio-custom-label">Hunspell</label>
-                </div>   
-        </div>
-        <div class="toggleContainer">
-            <div class="label">Case Sesitivity</div>
-            <div class="info">Retain the case or convert to lowercase before querying</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-        <!-- <div class="toggleContainer">
-            <div class="label">Clustering</div>
-            <div class="info">Enabling this will Spell Correct the user input to the nearest valid term in the current language</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div> -->
-        <div class="toggleContainer">
-            <div class="label">Stopwords</div>
-            <div class="info">Discard stop words present in user utterance for detecting intents. </div>
-                <label class="kr-sg-toggle with-label stopwords">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">Disable</span><span class="yes">Enable</span></div>
-                </label>
-        </div>
-        <div class="toggleContainer">
-            <div class="label">Traits</div>
-            <div class="info">Enable the identification of traits in user input</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox"checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-  
-        <div class="toggleContainer">
-            <div class="label">POS tagging</div>
-            <div class="info">Uses POS tags for indexing</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-        <div class="toggleContainer">
-            <div class="label">System Entities</div>
-            <div class="info">Uses System Entity informatin like Dates, City etc as meta information tagging and then indexing</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-        <div class="toggleContainer">
-            <div class="label">Negation Handling</div>
-            <div class="info">Handles cases where user explicity mentions negation. Ex: I do not want to transfer funds, should not identify the intent to Transfer funds</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-        <div class="toggleContainer">
-            <div class="label">Index FAQ Responses</div>
-            <div class="info">By Default only the FAQ questions are indexed. If enabled even answers will be indexed.</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-        <div class="toggleContainer">
-            <div class="label">Typo Tolerance</div>
-            <div class="info">Allows typo tolerance of upto 2 characters for words of length higher than 5</div>
-                <label class="kr-sg-toggle with-label">
-                    <input type="checkbox" checked>
-                    <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
-                </label>
-        </div>
-       
-    </perfect-scrollbar>
+<div>
+    Workbench component working
 </div>
