--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -3,7 +3,7 @@
         <div class="container-fluid p-0">
             <div class="logoTabsContainer">
                 <img src="assets/images/Findly_logo_blackFont.svg" class="logoKoreIcon" [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange>
-                <div class="myappname" *ngIf="appName"><div class="name">{{appName}}</div></div>
+                <div class="myappname" *ngIf="appName"><div  container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div></div>
                 <div class="headerTabsContainer">
                     <div class="headerMenuTab" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('summary')">Summary</div>
                     <div class="headerMenuTab" [routerLink]="['/source']" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('source')">
